@@ -199,7 +199,7 @@ save_datapaths () {
             # lookups: hit:0 missed:0 lost:0
             # flows: 0
             # port 0: br1 (internal)
-            # port 2: gre2886795521 (ipsec_gre: key=flow, pmtud=false, remote_ip=172.17.1.1, tos=inherit)
+            # port 2: gre2886795521 (ipsec_gre: key=flow, remote_ip=172.17.1.1, tos=inherit)
             # port 3: gre1 (ipsec_gre: remote_ip=192.168.113.1)
             # port 14: gre2 (gre: remote_ip=192.168.115.1)
             # port 15: gre3 (gre64: remote_ip=192.168.116.1)
